# git-diff-analyzer

./: README.md  config.example.yaml  manage.py  pyproject.toml
src/analyzer_ui/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/analyzer_ui/management/commands/: import_analysis.py
src/analyzer_ui/migrations/: 0001_initial.py
src/analyzer_ui/static/analyzer_ui/css/: custom.css
src/analyzer_ui/static/analyzer_ui/js/: main.js
src/analyzer_ui/templates/analyzer_ui/: analysis_detail.html  analysis_form.html  analysis_list.html  base.html
src/analyzer_ui/templatetags/: analyzer_tags.py
src/analyzer_web/: settings.py  urls.py  wsgi.py
src/git_diff_analyzer/: __init__.py  analysis.py  cli.py  config.py  git_integration.py  lambda_handler.py  models.py  utils.py
src/git_diff_analyzer/ai/: __init__.py  base.py  bedrock_provider.py  ollama_provider.py  prompts.py
src/git_diff_analyzer/generators/: __init__.py  dml_generator.py  pdf_generator.py  s3_uploader.py
